Prevent permalink icon from wrapping alone
.fa styles sets display to inline-block. We force the .headerlink elments to stay inline, to make it wrap together with the previous word.

--- a/src/sass/_theme_rst.sass
+++ b/src/sass/_theme_rst.sass
@@ -219,6 +219,7 @@
       font-size: 14px
       font-family: FontAwesome
       margin-left: 0.5em
+      display: inline
       @extend .fa
       &:focus
         opacity: 1
